# dashboard

./: .gitignore  Cargo.toml  README.md  create.sh  run-rest.sh  run-ui.sh
common/: Cargo.toml  README.md  readme.md
common/src/: health.rs  lib.rs  model.rs  rocket.rs  status.rs
common/src/auth/: user.rs
common/src/health/: app_liveness.rs  app_state.rs  liveness.rs
common/src/info/: version.rs
common/src/model/: app.rs  environment.rs  link.rs  response.rs
common/src/rocket/: logging.rs  uptime.rs
common/src/status/: svc_status.rs
dashboard-data/: Cargo.toml  README.md  readme.md
dashboard-data/ddl/01-initial/: up.sql
dashboard-data/src/: main.rs
dashboard-rest/: Cargo.toml  README.md  Rocket.toml  build.rs  readme.md
dashboard-rest/src/: configuration.rs  controller.rs  data.rs  main.rs  retrieve.rs  session.rs
dashboard-rest/src/controller/: apps.rs  rest_get_apps.rs  rest_get_liveness.rs  rest_get_service_status.rs  rest_get_user.rs  rest_get_version.rs
dashboard-rest/src/data/: query_apps.rs  query_envs.rs  query_links.rs  query_service_status.rs  query_user.rs
dashboard-rest/src/retrieve/: retrieve_service_status.rs  retrieve_version.rs
dashboard-rest/src/session/: query_user.rs
dashboard-ui/: Cargo.toml  README.md  Rocket.toml  readme.md
dashboard-ui/src/: cfg.rs  controller.rs  dashboard_template.rs  hello_template.rs  main.rs  retrieve.rs  template.rs
dashboard-ui/static/: dashboard-class.css  dashboard-html.css  dashboard-layout.css  dashboard-status.css  hello.css
dashboard-ui/templates/: dashboard.html  hello.html
(+25 files in other folders)
