[package]
name = "dashboard-rest"
version = "0.0.17"
edition = "2024"

[dependencies]
common = { path = "../common" }
rocket = { version = "0.5", features = ["json"] }
rusqlite = {  version="0.40.0", features=["bundled"] }
serde_json = { version = "1.0.150" }
tracing-subscriber = "0.3.23"
reqwest = { version = "0.13.4", features = ["json"]}
